--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,76 +1,80 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 10px;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  background-color: rgb(204, 204, 204);
+  text-align: center;
+}
+
+nav {
+  background-color:rgb(18, 0, 136);
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  text-transform: uppercase;
+  font-size: larger;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px 15px;
+}
+
+nav a:hover {
+  background-color: #555;
 }
 
 nav ul {
-  list-style-type: none;
+  list-style: none;
 }
 
 nav ul li {
   display: inline;
-  margin-right: 20px;
 }
 
-nav ul li a:link {
-  color:firebrick;
-  text-decoration: none;
+.main-content {
+  display: flex;
+  padding: 20px;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 80% 20%;
-  grid-template-rows: auto 1fr auto;
-  height: 100vh;
-  grid-template-areas: 
-    "header header"
-    "content sidebar"
-    "footer footer";
+.left-content {
+  flex: 2;
+  padding: 20px;
+  border-right: 2px solid #ccc;
 }
 
-.header {
-  grid-area: header;
+.right-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.ref-number {
+  font-weight: lighter;
+  color: gray;
+  margin-right: 5px;
+}
+
+.tab-margin {
+  margin-left: 20px;
+}
+
+footer {
+  background-color: #333;
+  color: white;
   text-align: center;
-}
-
-.content {
-  grid-area: content;
-  overflow: auto;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1.25em;
-  padding: 10px;
-}
-
-.sidebar {
-  grid-area: sidebar;
-  border-left: 1px solid #ccc;
-  overflow: auto;
-  padding: 5px;
-}
-
-.footer {
-  grid-area: footer;
-  height: 150px;
-  overflow: auto;
-  padding: 10px;
-}
-
-/* for the reference text numbering system that introduces paragraphs */
-.reftext {
-  font-size: 0.75em;
-  color: dimgray;
-  margin-right: 4em;
-}
-
-/* copyright notice that remains at the bottom */
-.copyright {
-  grid-area: copyright;
-  height: 50px;
-  background-color: #f3f3f3;
-  color: #606;
-  text-align: center;
-  line-height: 50px;
-  position: fixed;
+  padding: 10px 0;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
