--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,10 @@ header {
   text-align: center;
 }
 
+header h1 {
+  font-size: 1.2em;
+}
+
 nav {
   background-color:rgb(18, 0, 136);
   color: white;
@@ -41,6 +45,34 @@ nav ul {
 
 nav ul li {
   display: inline;
+}
+
+.papers-grid {
+  column-count: 3;
+  column-gap: 20px;
+  margin-bottom: 20px;
+  background-color: aqua;
+}
+
+.papers-grid ul li {
+  cursor: pointer;
+}
+
+/*.papers-grid div {
+  background-color: #f9f9f9;
+  padding: 8px;
+  border: 1px solid #ccc;
+  cursor:crosshair;
+}
+
+.papers-grid div:hover {
+  background-color: #e0e0e0;
+}*/
+
+@media(max-width: 600px) {
+  .papers-grid {
+    column-count: 2;
+  }
 }
 
 .container {
