--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,8 +54,43 @@ nav ul li {
   background-color: aqua;
 }
 
+.papers-grid ul {
+  list-style: none;
+}
+
 .papers-grid ul li {
   cursor: pointer;
+}
+
+.papers-lookup {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+}
+
+.papers-lookup form {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.papers-lookup input[type="text"] {
+  flex-grow: 1;
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.papers-lookup button {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
 
 /*.papers-grid div {
